# itr_rust_example

controller/: Cargo.toml
controller/src/: app.rs  find.rs  main.rs
device/: Cargo.toml  rust-toolchain.toml
device/.cargo/: config.toml
device/src/: find.rs  logging.rs  main.rs  util.rs  wifi.rs
shared/: Cargo.toml
shared/src/: lib.rs
