[package]
name = "device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared"}

embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }


cyw43 = { git = "https://github.com/embassy-rs/embassy.git",  features = ["defmt", "firmware-logs"] }
cyw43-pio = {  git = "https://github.com/embassy-rs/embassy.git",  features = ["defmt", "overclock"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

postcard = "1.0.0"
serde = { version = "1.0.*", default-features = false }

critical-section = {version = "0.2.8"}
static_cell = { version = "1.1", features = ["nightly"]}
defmt = "0.3"
log = "0.4"
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false