[package]
name = "device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared"}

embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "tcp", "udp", "dhcpv4", "proto-ipv4"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = ["unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "unstable-traits", "defmt-timestamp-uptime"] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git" }

cyw43 = { git = "https://github.com/embassy-rs/embassy.git",  features = ["defmt", "firmware-logs"] }
cyw43-pio = {  git = "https://github.com/embassy-rs/embassy.git",  features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

postcard = {version = "1.0.7", default-features = false, features = ["heapless", "experimental-derive"]}
serde = { version = "1.0.*", default-features = false }
heapless = "0.7"

static_cell = { version = "1.1", features = ["nightly"]}
defmt = "0.3"
defmt-rtt = "0.4"
log = "0.4"
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false