[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = {version = "0.2.31", features = ["assertcp"]}
serde = {version = "1.0.188", default-features = false, features = ["derive"]}
postcard = {version = "1.0.7", default-features = false, features = ["experimental-derive"]}

